--- a/StockSimulator/StockSimulator.csproj
+++ b/StockSimulator/StockSimulator.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Logger.cs\Logging.csproj" />
+    <ProjectReference Include="..\Logger\Logging.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\StockRepository\StockRepository.csproj" />
   </ItemGroup>
